restyling to hide x scrollbar, fixing redux persist issiu thet happened when bad data retrived from server, refactoring and restyling component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Varela Round", "sans-serif";
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 code {
